--- a/home/templates/home/community_read_only.html
+++ b/home/templates/home/community_read_only.html
@@ -45,17 +45,12 @@ Past community participation in Outreachy
 	<p>This community currently has no approved coordinator. Coordinators approve mentored projects, and communicate with both mentors and Outreachy organizers. The full list of coordinator duties can be found on <a href="/mentor/">here</a>.
 {% endif %}
 
-{% if coordinator and coordinator.approval_status != coordinator.APPROVED %}
-	Your request to coordinate for this community is:
-	<a href="{{ coordinator.get_preview_url }}">
-		<strong>{{ coordinator.get_approval_status_display }}</strong>
-	</a>
-{% else %}
+{% if not coordinator %}
 	<p>If you have been a community coordinator in the past but have not yet created an account on this site, or you would like to volunteer to be a new coordinator and you understand the <a href="/mentor/">coordinator duties</a>, you can sign up to be a community coordinator.</p>
 	<p><a href="{% url 'coordinatorapproval-action' action='submit' community_slug=community.slug %}" class="btn btn-success">Coordinate for This Community</a></p>
-{% endif %}
-
-{% if coordinator and coordinator.approval_status == coordinator.APPROVED %}
+{% elif coordinator.approval_status != coordinator.APPROVED %}
+	<p>Your request to coordinate for this community is: <strong>{{ coordinator.get_approval_status_display }}</strong></p>
+{% else %}
 	{% if not participation_info %}
 	{% elif participation_info.approval_status == participation_info.WITHDRAWN %}
 		<p>Have you changed your mind and decided your community can participate in this round of Outreachy?</p>
