Correct language about initial application

--- a/home/templates/home/preview/participation_action.html
+++ b/home/templates/home/preview/participation_action.html
@@ -129,7 +129,7 @@
 
 	<p>Once communities have secured funding for at least one intern, the Outreachy program may be able to provide funding for additional interns from our general fund. During the intern selection process, Outreachy organizers review the funding requests across all participating communities, and fund the most promising applicants. The evaluation criteria we use for general funding is:</p>
 	<ol>
-		<li><p>Is the applicant eligible? It's important to have applicants check their eligibility section of their application early so mentors don't work with ineligible applicants</p></li>
+		<li><p>Is the applicant eligible? Outreachy organizers will double check their initial application.</p></li>
 		<li><p>Does the applicant have additional time constraints? If they barely meet the time criteria, they may not be a good candidate.</p></li>
 		<li><p>Has the candidate made multiple contributions? Are those contributions more than just a documentation fix or whitespace change? Candidates that show skills specific to the project and are consistently contributing are more likely to be accepted for general funding.</p></li>
 	</ol>
