Change systematic bias -> systemic bias on initial application.
Update privacy policy, templates, and views.

--- a/home/templates/home/snippet/applicant_review_essay_rating.html
+++ b/home/templates/home/snippet/applicant_review_essay_rating.html
@@ -25,7 +25,7 @@
 				<p>Please review whether the applicant provided details to support a strongly compelling argument that:
 				</p>
 				<ol>
-					<li>They face discrimination or systematic bias in their learning environment, or discrimination or bias by their society which was a barrier to accessing a learning environment</li>
+					<li>They face discrimination or systemic bias in their learning environment, or discrimination or bias by their society which was a barrier to accessing a learning environment</li>
 					<li>They are from a group who is underrepresented in the technology industry of their country</li>
 				</ol>
 				<form method="post">
