--- a/home/templates/home/eligibility.html
+++ b/home/templates/home/eligibility.html
@@ -31,13 +31,15 @@
 <ul>
 	<li>Your gender identity</li>
 	<li>Your race or ethnicity (only for residents and nationals of the United States of America)</li>
-	<li>Three essay questions:</li>
+	<li>Four essay questions:</li>
 	<ol>
 		<li><b>What barriers or concerns have kept you from contributing to free and open source software?</b> Please provide specific examples. Outreachy organizers strongly encourage you to write your personal stories. We want you to know that we won't judge your writing style, grammar or spelling.</li>
 
 		<li><b>What systemic bias or discrimination have you faced while building your skills?</b> Outreachy projects often require applicants to know some basic skills. Those skills might include programming, user experience, documentation, illustration and graphical design, or data science. You may have already learned some basic skills through university or college classes, specialized schools, online classes, online resources, or with a mentor, friend, family member or co-worker. In these settings, have you faced systemic bias or discrimination? Have you been discouraged from accessing these resources because of your identity or background? Please provide specific examples and (optionally) statistics. Outreachy Organizers strongly encourage you to write your personal stories. We want you to know that we won't judge your writing style, grammar or spelling.</li>
 
 		<li><b>Does your learning environment have few people who share your identity or background? Please provide details.</b> Contributing to free and open source software takes some skill. You may have already learned some basic skills through university or college classes, specialized schools, online classes, online resources, or with a mentor, friend, family member or co-worker. Does any of your learning environments have few people who share your identity or background? How did your identity or background differ from the majority of people in this learning environment? Outreachy Organizers strongly encourage you to write your personal stories. We want you to know that we won't judge your writing style, grammar or spelling.</li>
+
+		<li><b>What systemic bias or discrimination would you face if you applied for a job in the technology industry of your country?</b> Think about when you have applied for a job in the technology industry of your country. Do you think you have faced discrimination on the basis of your background or identity? If you have not applied for a job yet, do you think you may be discriminated against on the basis of your background or identity? Please provide specific examples and (optionally) statistics. Outreachy Organizers strongly encourage you to write your personal stories. We want you to know that we won't judge your writing style, grammar or spelling.</li>
 	</ol>
 </ul>
 
