Add system requirements to project description
Also add project skills to the detailed project description, so that
applicants don't have to keep referring to the top of the community
landing page.

--- a/home/templates/home/snippet/project_landing_snippet.html
+++ b/home/templates/home/snippet/project_landing_snippet.html
@@ -1,3 +1,11 @@
+<h3>Project Skills</h3>
+<div>
+	{% include "home/snippet/project_skills_display.html" %}
+</div>
+
+<h3>System Requirements</h3>
+{{ project.minimum_system_requirements|safe }}
+
 <h3>Project Description</h3>
 <p>{{ project.short_title }}</p>
 {{ project.long_description|safe }}
