Consider all students as full-time students.
Don't make exceptions for part-time students, graduate credits, or
Outreachy project credits. Use 40 hours per week as the number of hours
all students work.

--- a/home/templates/home/eligibility_wizard_general.html
+++ b/home/templates/home/eligibility_wizard_general.html
@@ -15,7 +15,7 @@ You'll need to fill out an initial application for each round you apply for.
 {% include "home/snippet/privacy_policy.html" %}
 
 <p>
-University and college students who are applying will need to provide information about their school calendar and class credits.
+University and college students who are applying will need to provide information about their school calendar.
 We will ask about your current term and your next term.
 Please have that information before starting this process.
 </p>
