--- a/home/templates/home/eligibility_results.html
+++ b/home/templates/home/eligibility_results.html
@@ -90,8 +90,8 @@ Outreachy eligibility results
 	{% include 'home/snippet/time_commitments.html' %}
 
 	<p>Outreachy organizers review each applicant's time commitments,
-	including volunteer work, employment, contract work, stated class
-	credits, and the school's academic calendar.</p>
+	including volunteer work, employment, contract work, and
+	student's academic calendar.</p>
 	
 	<p>For applicants who are students, we look at the school's academic
 	calendar to determine if students have a long enough break between
@@ -182,11 +182,6 @@ Outreachy eligibility results
 					{{ current_round.internstarts|date:"F d, Y" }} to {{ current_round.internends|date:"F d, Y" }}.
 					If a school term calendar is not yet released, send us the school term calendar from the year before.
 				</li>
-				<li>The <strong>suggested curriculum for your degree</strong>,
-					which includes the number of credits a student takes each term.</li>
-				<li>(If applicable) A school website URL, student handbook, or other
-					<strong>documentation that says students are allowed to register
-					for less than the suggested amount of credits in their curriculum</strong>.</li>
 			</ul>
 		{% endif %}
 		</li>
