Note about changes for student eligibility based on hemisphere
Not sure if this will be the final way we handle this, but it's closer.

--- a/home/templates/home/schoolinformation_form.html
+++ b/home/templates/home/schoolinformation_form.html
@@ -20,12 +20,12 @@ Update Your School Information
 			information about your school terms and academic
 			calendar.</p>
 			
-			<p>Applicants need to have 49 consecutive days free from full-time
-			commitments. Due to the time commitment, students in
-			the northern hemisphere will most likely be eligible
-			for the May to August internship round. Students from
-			the southern hemisphere will most likely be eligible
-			for the December to March internships.</p>
+			<p>Students in the northern hemisphere are only
+			eligible for the May to August internship round.
+			Students in the southern hemisphere are only eligible
+			for the December to March internship round. Applicants
+			near the equator need to have 49 consecutive days free
+			from school commitments.</p>
 
 			<p>We have observed that some students make the following common mistakes:
 			</p>
