Ask applicants what their job title and job duties are.
Display a warning on the applicant review if they have a part-time job.
This displays regardless of the number of hours, because it's too hard
to compute that in a template.

Display their job title and job description to applicant reviewers (this
may also display it to mentors, I don't know?).

Fixes #272

--- a/home/templates/home/snippet/time_commitment_overview.html
+++ b/home/templates/home/snippet/time_commitment_overview.html
@@ -87,7 +87,10 @@
 						<p>Employment time commitments:</p>
 						<ul>
 						{% for period in tcs.employment_time_commitments %}
-							<li>{{ period.hours_per_week }} hours per week from {{ period.start_date|date:"Y-m-d" }} to {{ period.end_date|date:"Y-m-d" }}.{% if period.quit_on_acceptance %} Applicant has indicated they will quit this job if they are accepted as an Outreachy intern.{% endif %}</li>
+							<li>{{ period.job_title }}</li>
+							<li>{{ period.hours_per_week }} hours per week from {{ period.start_date|date:"Y-m-d" }} to {{ period.end_date|date:"Y-m-d" }}.</li>
+							{% if period.quit_on_acceptance %}<li>Applicant has indicated they will quit this job if they are accepted as an Outreachy intern.</li>{% endif %}
+							<li>Job description: {{ period.job_description|linebreaksbr }}</li>
 						{% endfor %}
 						</ul>
 					{% endif %}
