--- a/home/templates/home/applicant_review_detail.html
+++ b/home/templates/home/applicant_review_detail.html
@@ -72,6 +72,9 @@
 			{% endif %}
 			{{ tcs.longest_period_free }} days free / {{ tcs.internship_total_days.days }} days total. Applicants are required to have 49 days free.
 		</li>
+		{% if tcs.employment_time_commitments %}
+			<li><span class="badge badge-warning">Warning</span> Applicant has a part-time job.</li>
+		{% endif %}
 	{% endwith %}
 		<li>
 			{% if application.is_not_under_export_control == False %}
