Remove broken link to community information on CFP page

--- a/home/templates/home/community_cfp.html
+++ b/home/templates/home/community_cfp.html
@@ -112,7 +112,7 @@ Call for Outreachy community coordinators and mentors
 {% endif %}
 
 <h2>Past Participating FOSS Communities</h2>
-<p>In order for a community to participate in an Outreachy internship round, the community must have at least one coordinator. If you would like to volunteer to be a coordinator, you should <a href="/mentor/#coordinator">understand the coordinator duties</a> and what <a href="/mentor/community-faq">information they will need to update</a> about the community.</p>
+<p>In order for a community to participate in an Outreachy internship round, the community must have at least one coordinator. If you would like to volunteer to be a coordinator, you should <a href="/mentor/#coordinator">understand the coordinator duties</a>.</p>
 
 <p>Mentors may visit the community page and sign up to receive an email notification when a coordinator signs the community up for this Outreachy round.</p>
 
