--- a/home/templates/home/community_cfp.html
+++ b/home/templates/home/community_cfp.html
@@ -124,7 +124,7 @@ Call for Outreachy community coordinators and mentors
 
 {% if current_round %}
 	<h2>Submit a New FOSS community for Organizer Review</h2>
-	<p>First, double check that the community isn't listed in the above participating communities or past communities list. If the community is listed as a past Outreachy community, you can sign up to coordinate for that community. Coordinators will need to review the <a href="/mentor/#coordinator">coordinator duties</a> and <a href="/mentor/community-faq/">community requirements</a> for participating in internships. Then submit a new community for review.
+	<p>First, double check that the community isn't listed in the above participating communities or past communities list. If the community is listed as a past Outreachy community, you can sign up to coordinate for that community. Coordinators will need to review the <a href="/mentor/#coordinator">coordinator duties</a> and community requirements in the sections above. Then submit a new community for review.
 	</p>
 	<p><a class='btn btn-success' href="{% url 'community-add' %}">Submit a New Community</a></p>
 {% endif %}
