Rework student term collection and eligibility rules around hemisphere.
Add a new field last_term to say that this SchoolTimeCommitment is the
last term in someone's degree.

Require all students to provide their current term and two terms after
that, except if they're graduating and one of the terms is their last
term.

Verify:
 - terms are in consecutive order
 - only one term has last_term set
 - all three terms are filled out, unless one term has the last_term set

Update the eligibility rules and eligibility results page to say that
students are restricted to specific Outreachy rounds based on which
hemisphere their school is located in. Reference the Wikipedia page on
hemispheres in case they don't know what the term means.

Notify the students that while they can upload their school calendar to
a file sharing service, the Outreachy organizers may not take into
account any calendar except a publicly available official school
calendar.

--- a/home/templates/home/eligibility.html
+++ b/home/templates/home/eligibility.html
@@ -22,7 +22,7 @@
 	<li>You are or will be 18 years of age or older by {{ current_round.internstarts }}</li>
 	<li>You have not previously participated in an Outreachy, Outreach Program for Women, or Google Summer of Code internship. People who participated as an intern for Google Summer of Code are not eligible for Outreachy. All Google Summer of Code participants are ineligible for Outreachy, including people who did not successfully finish their GSoC internship.</li>
 	<li>You are available for a full-time, 40 hours a week internship from {{ current_round.internstarts }} to {{ current_round.internends }}.</li>
-	<li>Outreachy is open to both students and people who are not students. However, applicants who are students must have at least 49 consecutive days free from full-time commitments. Due to the time commitment, students in the northern hemisphere will most likely be eligible for the May to August internship round. Students from the southern hemisphere will most likely be eligible for the December to March internships. Please have your class schedule and school calendar on hand when completing the initial application.</li>
+	<li>Outreachy is open to both students and people who are not students. {% include 'home/snippet/student_hemisphere.html' %} If you are completing your last term for your degree, you may be eligible, and we encourage you to submit an initial application.</li>
 	<li>Outreachy internships are full-time 40-hour a week internships. Applicants who have part-time or contracting jobs are welcome to apply, but they must meet additional requirements.
 </ul>
 
